# rpizero-cross-compile

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  exec  init
src/: main.cxx
